--- a/templates/apps/form.html
+++ b/templates/apps/form.html
@@ -1,32 +1,34 @@
 {% extends "../base.html" %}
+{% block head %}
+   {{form.media}}
+{% endblock %}
 
 {% block content %}
+  <h3>{{ form_heading }}</h3>
+  <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
 
-<form action="" method="post" enctype="multipart/form-data" >
-  {% csrf_token %}
-
-  {% for hidden_field in form.hidden_fields %}
-  {{ hidden_field }}
-{% endfor %}
-
-{% if form.non_field_errors %}
-  <div class="alert alert-danger" role="alert">
-    {% for error in form.non_field_errors %}
-      {{ error }}
+    {% for hidden_field in form.hidden_fields %}
+      {{ hidden_field }}
     {% endfor %}
-  </div>
-{% endif %}
 
-{% for field in form.visible_fields %}
-  <div class="form-group">
-    {{ field.label_tag }}
-    {{ field }}
-    {% if field.help_text %}
-      <small class="form-text text-muted">{{ field.help_text }}</small>
+    {% if form.non_field_errors %}
+      <div class="alert alert-danger" role="alert">
+        {% for error in form.non_field_errors %}
+          {{ error }}
+        {% endfor %}
+      </div>
     {% endif %}
-  </div>
-{% endfor %}
-   <input type="submit" value="submit"/>
-</form>
+
+  {% for field in form.visible_fields %}
+    <div class="form-group">
+      {{ field.label_tag }}
+      {{ field }}
+      {% if field.help_text %}
+        <small class="form-text text-muted">{{ field.help_text }}</small>
+      {% endif %}
+    </div>
+  {% endfor %}
+     <input type="submit" value="submit"/>
+  </form>
 
 {% endblock %}
