--- a/templates/apps/restaurant_list.html
+++ b/templates/apps/restaurant_list.html
@@ -1,22 +1,28 @@
 {% extends "../base.html" %}
-
+{% block title %}
+    Restaurants List
+{% endblock %}
 {% block content %}
- <h3>Restaurant list</h3>
+ <h3>Restaurants</h3>
 
-<ul>
+<ul class="list-group list-group-flush">
   {% for restaurant in latest_restaurant_list %}
-    <li><a href="{% url 'apps:restaurant_detail' restaurant.id %}">
-    {{ restaurant.name }}</a></li>
-   {% empty %}<li>Sorry, no restaurant reviews. </li>
+    <li class="list-group-item">
+        <a href="{% url 'apps:restaurant_detail' restaurant.id %}">
+        {{ restaurant.name }}</a>
+    </li>
+    {% empty %}
+    <li class="list-group-item">Sorry, no restaurant reviews. </li>
   {% endfor %}
 </ul>
+<hr>
 
- {% if request.user.is_authenticated %}
- <p><span class="glyphicon glyphicon-plus"></span> <a
-         href="{% url 'apps:restaurant_create' %}">Add a restaurant</a></p>
- {% else %}
+  <p><span class="glyphicon glyphicon-plus"></span> 
+    <a href="{% url 'apps:restaurant_create' %}">Add a restaurant</a>
+  </p>
 
- <p>Add a restaurant after <a
-         href="{% url 'login' %}?next={% url 'apps:restaurant_create' %}">sign in</a>. </p>
-  {% endif %}
+  <p>Add a restaurant after
+     <a href="{% url 'login' %}?next={% url 'apps:restaurant_create' %}">
+       sign in</a>. 
+  </p>
 {% endblock %}
