--- a/templates/base.html
+++ b/templates/base.html
@@ -3,49 +3,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>{% block title %} Django Restaurant Reviews System {% endblock %} </title>
+<title>{% block title %}  {% endblock %} | Restaurant Review System</title>
 <meta charset="utf-8">
 <meta name="keywords" content="{% block keywords %} some keywords{% endblock %} ">
-<meta name="description" content="{% block description %} Django web application example.{% endblock %}">
+<meta name="description"
+      content="{% block description %} Restaurant Review Application{% endblock %}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+<link rel="stylesheet" type="text/css" href="{% static 'css/app-main.css' %}">
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    {% block head %}
+    {% endblock %}
 
 </head>
 
 <body class="bs-docs-home">
-<nav class="navbar navbar-inverse navbar-static-top bs-docs-nav">
-  <div class="container">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-      </button>
-   <a class="navbar-brand" href="#"><strong>Django Restaurant Reviews app</strong></a>
-     </div>
-
-      <div class="collapse navbar-collapse" id="myNavbar">
-
-       <ul class="nav navbar-nav navbar-right">
-       {% if user.is_authenticated %}
-
-          <li class="dropdown">
-              <a class="dropdown-toggle btn-green" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span>  {{ user.username }} <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-   <li><a href="{% url 'logout' %}">Sign out</a></li>
-            </ul>
-          </li>
-         {% else %}
-   <li class="dropdown"><a class="dropdown-toggle btn-green" href="{% url 'signup' %}"><span class="glyphicon glyphicon-user"></span> Sign up</a></li>
-   <li class="dropdown"><a class="dropdown-toggle" href="{% url 'login' %}" ><span class="glyphicon glyphicon-log-in"></span> </a></li>
-       {% endif %}
-       </ul>
-
-    </div>
-
-  </div>
-</nav>
+{% include 'header.html' %}
 
  <!-- Page content of course! -->
 <main id="section1" class="container-fluid">
@@ -55,11 +28,9 @@
    <div class="wrapper">
         <div class="newsbox">
              <div class="container1">
-
- {% block content %}
-  {% if error_message %}<p><strong>{{ error_message}}</strong></p>{% endif %}
-  {% endblock %}
-
+             {% block content %}
+              {% if error_message %}<p><strong>{{ error_message}}</strong></p>{% endif %}
+              {% endblock %}
         </div>
       </div>
    </div>
@@ -68,15 +39,14 @@
 
 </div>
 </main>
-<footer class="footer">
-  {% block footer %}{% endblock %}
+<footer class="container-fluid footer">
+  @{% now "Y" %} All rights reserved.
 </footer>
 <!--End of Footer-->
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
