--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-   <a class="navbar-brand" href="#"><strong>Restaurant Reviews app</strong></a>
+   <a class="navbar-brand" href="{% url 'apps:restaurant_list' %}"><strong>Restaurant Reviews app</strong></a>
      </div>
 
       <div class="collapse navbar-collapse" id="myNavbar">
