--- a/templates/apps/form.html
+++ b/templates/apps/form.html
@@ -20,15 +20,19 @@
     {% endif %}
 
   {% for field in form.visible_fields %}
-    <div class="form-group">
+    <div class="row top-buffer">
+      <div class="col-md-6">
       {{ field.label_tag }}
       {{ field }}
       {% if field.help_text %}
         <small class="form-text text-muted">{{ field.help_text }}</small>
       {% endif %}
+      </div>
     </div>
   {% endfor %}
-     <input type="submit" value="submit"/>
+    <div class="row top-buffer">
+      <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+    </div>
   </form>
 
 {% endblock %}
